# snake_game

./: .gitignore  LICENSE  README.md  colors.py  common.py  food.py  inputhandler.py  main.py  pyproject.toml  snake.py  sprites.py  spritesheet.py
